# haskell-ant-sim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  diagrams.bat  diagrams.sh  fourmolu.yaml  haskell-ant-sim.cabal  stack.yaml
ant-ai/: ant-ai.cabal  package.yaml
ant-ai/app/: Main.hs
ant-ai/src/: AntAI.hs  NeuralNetwork.hs
ant-ai/test/: Spec.hs
ant-movement/: ant-movement.cabal  package.yaml
ant-movement/app/: Main.hs
ant-movement/src/: AntMovement.hs
ant-sim/: ant-sim.cabal  package.yaml
ant-sim/app/: Main.hs
ant-sim/src/: AntSim.hs
app/: AntDriver.hs  ApecsPoc.hs  ECSPOC.hs  ElmArch.hs  FlatlandRendererDriver.hs  FoodDriver.hs  InputKeys.hs  Main.hs  Model.hs  RaylibLoadTexture.hs  RaylibPoc.hs
assets/: ant.pdn
diagrams/: stackdot-ideal.dot  stackdot.dot
draw-walls/: draw-walls.cabal  package.yaml
draw-walls/app/: Main.hs
draw-walls/src/: DrawWalls.hs
flatland-renderer/: flatland-renderer.cabal  package.yaml
flatland-renderer/app/: Main.hs
flatland-renderer/src/: FlatlandRenderer.hs
food/: food.cabal  package.yaml
food/src/: Food.hs
models/: foraging_1700.brain  foraging_2000_7.42_99_99_6_presentation_6cd6084.brain  foraging_800.brain  foraging_99_99_6_fence_e681c76.brain  foraging_99_99_6_wrap_02a9d28.brain  foraging_99_99_6_wrap_d787225.brain  returning_1700.brain  returning_2000_7.42_99_99_6_presentation_6cd6084.brain  returning_800.brain  returning_99_99_6_fence_e681c76.brain  returning_99_99_6_wrap_02a9d28.brain  returning_99_99_6_wrap_d787225.brain
neural-network/: neural-network.cabal  package.yaml
neural-network/src/: NeuralNetwork.hs
neural-network/test/: Spec.hs
pheromones/: package.yaml  pheromones.cabal
pheromones/app/: Main.hs
pheromones/src/: Pheromones.hs
shared/: package.yaml  shared.cabal
shared/src/: Constants.hs  ScreenshotOps.hs  Shared.hs  Types.hs
src/: Ant.hs  AntSim.hs  Common.hs  Convolve.hs  DrawWalls.hs  FlatlandRenderer.hs  MainGame.hs  Model.hs  Shared.hs  Types.hs
src/ant-movement-lib/: AntMovement.hs
src/draw-walls-lib/: DrawWalls.hs
src/flatland-renderer-lib/: FlatlandRenderer.hs
src/food-lib/: Food.hs
src/main-game-lib/: MainGame.hs
src/shared-lib/: Constants.hs  Shared.hs  Types.hs
test/: Spec.hs
