cabal-version:      3.0
name:               haskell-ant-sim
version:            0.1.0.0
synopsis:           Ant simulation in Haskell.
author:             Oleg Alexander
category:           Game
build-type:         Simple

common options
    ghc-options:        -Wall -O2 -Wno-unrecognised-pragmas
    default-language:   GHC2021
    default-extensions: Strict, LambdaCase
    build-depends:      base ^>=4.17.2.0,
                        random ^>=1.2.1.2,
                        h-raylib ^>= 5.1.1.0,
                        containers    

library
    import:             options
    hs-source-dirs:     src
    exposed-modules:    FlatlandRenderer,
                        DrawWalls,
                        Shared,
                        Types,
                        Constants,
                        MainGame


executable main
    import:         options
    main-is:        Main.hs
    build-depends:  haskell-ant-sim
    hs-source-dirs: app

executable draw-walls
    import:         options
    main-is:        DrawWallsDriver.hs
    other-modules:  DrawWalls,
                    Shared,
                    Types,
                    Constants
    hs-source-dirs: app, src


executable flatland-renderer
    import:         options
    main-is:        FlatlandRendererDriver.hs
    build-depends:  haskell-ant-sim
    hs-source-dirs: app