cabal-version:      3.0
name:               haskell-ant-sim
version:            0.1.0.0
synopsis:           Ant simulation in Haskell.
author:             Oleg Alexander
category:           Game
build-type:         Simple

common options
    ghc-options:        -Wall -O2 -Wno-unrecognised-pragmas
    default-language:   GHC2021
    default-extensions: Strict, LambdaCase
    build-depends:      base ^>=4.17.2.0,
                        random ^>=1.2.1.2,
                        h-raylib ^>= 5.1.1.0,
                        containers    

library
    import:             options
    hs-source-dirs:     src


library shared-lib
    import:             options
    hs-source-dirs:     src/shared-lib
    exposed-modules:    Shared,
                        Types,
                        Constants

library draw-walls-lib
    import:             options
    hs-source-dirs:     src/draw-walls-lib
    exposed-modules:    DrawWalls
    build-depends:      shared-lib


library flatland-renderer-lib
    import:             options
    hs-source-dirs:     src/flatland-renderer-lib
    exposed-modules:    FlatlandRenderer
    build-depends:      shared-lib

library main-game-lib
    import:             options
    hs-source-dirs:     src/main-game-lib
    exposed-modules:    MainGame
    build-depends:      shared-lib,
                        draw-walls-lib,
                        flatland-renderer-lib

executable main
    import:         options
    main-is:        Main.hs
    build-depends:  main-game-lib
    hs-source-dirs: app

executable draw-walls
    import:         options
    main-is:        DrawWallsDriver.hs
    build-depends:  draw-walls-lib
    hs-source-dirs: app


executable flatland-renderer
    import:         options
    main-is:        FlatlandRendererDriver.hs
    build-depends:  flatland-renderer-lib
    hs-source-dirs: app