cabal-version:   3.0
name:            neural-network
version:         0.1.0.0
license:         NONE
author:          olegalexander@gmail.com
maintainer:      Oleg Alexander
build-type:      Simple
extra-doc-files: CHANGELOG.md

common options
    ghc-options:        -Wall -O2 -Wno-unrecognised-pragmas
    default-language:   GHC2021
    default-extensions: Strict
    build-depends:      base ^>=4.19.1.0,
                        random ^>=1.2.1.3,
                        h-raylib ^>= 5.1.3.0,
                        pretty-simple ^>= 4.1.2.0,
                        vector ^>= 0.13.2.0,
                        containers  

library
    import:           options
    exposed-modules:  NeuralNetwork  
    hs-source-dirs:   src


test-suite spec
  import: options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: hspec, neural-network