cabal-version:   3.0
name:            shared
version:         0.1.0.0
license:         NONE
author:          olegalexander@gmail.com
maintainer:      Oleg Alexander
build-type:      Simple
extra-doc-files: CHANGELOG.md

common options
    ghc-options:        -Wall -O2 -Wno-unrecognised-pragmas
    default-language:   GHC2021
    default-extensions: Strict
    build-depends:      base ^>=4.19.1.0,
                        random ^>=1.2.1.2,
                        h-raylib ^>= 5.1.3.0,
                        containers  

library
    import:           options
    exposed-modules:  Constants, Types, Shared
    hs-source-dirs:   src
